style.css
.main img {
  max-width: 100%;
  width: 100%;
  height: 93vh;
  object-fit: cover;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  transition: all 3s ease;
}

.main .hero-text-container {
  position: absolute;
  font-family: "brat";
  padding-top: 3vh;
  top: 5vh;
  left: 5%;
  /* transform: rotateZ(-12deg); */
  /* background-color: mistyrose; */
  color: white;
  /* overflow: hidden; */
  z-index: 10;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 65vmax;
}

main .hero-text-container > * {
  text-shadow: 5px 10px 8px rgba(24, 24, 24, 0.425);
  /* text-shadow: 12px 10px 3px rgb(24, 24, 24); */
  z-index: 90;
}

.CAPTURE {
  font-size: 8vw;
  letter-spacing: 1vw;
  /* transform-origin: center;
  transform: translateY(-1vw) translateX(4vw) rotateZ(-13deg); */
  padding-left: 5vw;
  z-index: 999;
}

.ZOE {
  /* position: absolute; */
  font-size: 26vw;
  letter-spacing: 6vw;
  /* height: 100px;
  text-align: center;
  line-height: 100px; */
}

.active {
  opacity: 1 !important;
}

@media all and (orientation: portrait) {
  .main img {
    height: 100vh;
  }

  body .main .hero-text-container {
    position: relative;
    top: unset;
    left: unset;
    transform: unset;
    margin-top: 20vh;
    padding-top: 10vh;
    text-align: center;
  }

  .CAPTURE {
    font-size: 13vw;
    letter-spacing: 3vw;
    transform: translate(0) rotateZ(0deg);
  }
}

